--- a/mlkit_sample_01/pubspec.yaml
+++ b/mlkit_sample_01/pubspec.yaml
@@ -34,7 +34,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  firebase_core: ^1.13.1
+  firebase_auth: ^3.3.10
+  cloud_firestore: ^3.1.10
+  firebase_messaging: ^11.2.10
+  firebase_storage: ^10.2.9
+  cloud_functions: ^3.2.10
+  flutterfire_ui: ^0.3.6
+  camera: ^0.9.4+16
+  image_picker: ^0.8.4+11
+  google_ml_kit: ^0.7.3
+  image: ^3.1.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
