--- a/mlkit_sample_face_detection_01/ios/Runner/Info.plist
+++ b/mlkit_sample_face_detection_01/ios/Runner/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>mlkit_sample_01</string>
+	<string>mlkit_sample_face_detection_01</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
