--- a/mlkit_sample_face_detection_01/pubspec.yaml
+++ b/mlkit_sample_face_detection_01/pubspec.yaml
@@ -1,4 +1,4 @@
-name: mlkit_sample_01
+name: mlkit_sample_face_detection_01
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
