--- a/mlkit_sample_image_to_translated_text_01/android/app/build.gradle
+++ b/mlkit_sample_image_to_translated_text_01/android/app/build.gradle
@@ -102,4 +102,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:29.2.1')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.mlkit:translate:17.0.0'
 }
