--- a/mlkit_sample_image_to_translated_text_01/pubspec.yaml
+++ b/mlkit_sample_image_to_translated_text_01/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  uuid: ^3.0.6
+  image_picker: ^0.8.4+11
+  firebase_core: ^1.13.1
+  cloud_firestore: ^3.1.10
+  firebase_storage: ^10.2.9
+  google_ml_kit: ^0.7.3
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -87,3 +94,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  assets:
+    - assets/images/
